feat(agent): A2A Served Agent Support for Multi-Turn (#494)
* feat(agent): Introduce TaskManager for multi-turn conversation management

- Added TaskManager to handle task data and manage conversation context across multiple interactions.
- Updated AnyAgentExecutor to utilize TaskManager for task management, enhancing the agent's ability to maintain conversational continuity.
- Refactored agent execution logic to format queries with historical context and update task traces.
- Introduced default history formatting function for better prompt generation.
- Added integration tests to validate task management functionality in multi-turn conversations.

This update lays the groundwork for improved session management and conversation tracking! 🎉

* lint

* Address PR comments and make the integration test use a mocked agent to avoid llm calls since we don't need them.

* lint

* tweak prompt to be more clear

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dynamic = ["version"]
 dependencies = [
   "duckduckgo_search",
   "fire",
-  "litellm",
+  "litellm==1.72.4", # until https://github.com/BerriAI/litellm/issues/11759 is fixed
   "markdownify",
   "mcp>=1.5.0",
   "opentelemetry-exporter-otlp",
