--- a/.github/workflows/tests-docs.yaml
+++ b/.github/workflows/tests-docs.yaml
@@ -34,4 +34,6 @@ jobs:
           uv sync --group tests --extra all --extra a2a
 
       - name: Run Documentation tests
-        run: pytest -v tests/docs
+        # The env key is necessary for docs involving OTel
+        # see https://protobuf.dev/news/2022-05-06/#python-updates
+        run: PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python pytest -v tests/docs
