feat: Organize Integration tests, consolidate a2a logic, simplify and clarify naming (#516)
* feat: clean up integration tests to rename and consolidate

* lint

* default model location

* feat: clean up integration tests to rename and consolidate

* lint

* default model location

* lint

* rename

* lint

* Update integration tests to run TINYAGENT test from the new test file location, enhancing early issue detection.

* simplify pytest-xdist config

--- a/.github/workflows/tests-integration.yaml
+++ b/.github/workflows/tests-integration.yaml
@@ -25,10 +25,11 @@ jobs:
         run: |
           uv sync --group tests
 
+      # Run the tinyagent test first to get an early signal of issues with the codebase.
       - name: Run TINYAGENT test
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: pytest -v tests/integration/test_load_and_run_agent.py -k "TINYAGENT"
+        run: pytest -v tests/integration/test_agent.py -k "TINYAGENT"
 
       - name: Run Snapshot tests
         run: pytest -v tests/snapshots
@@ -40,4 +41,4 @@ jobs:
       - name: Run Integration tests (parallel with xdist)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: pytest -v tests/integration -d --tx '4*popen//python=python' -k "not test_load_and_run_agent[TINYAGENT]"
+        run: pytest -v tests/integration -n auto -k "not test_load_and_run_agent[TINYAGENT]"
