fix(docs): Add `evaluation` to `nav` and fix missing link. (#527)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,7 @@ nav:
     - Config: api/config.md
     - Tools: api/tools.md
     - Tracing: api/tracing.md
+    - Evaluation: api/evaluation.md
     - Logging: api/logging.md
 
 theme:
