--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
   "fire",
   "litellm==1.72.4", # until https://github.com/BerriAI/litellm/issues/11759 is fixed
   "markdownify",
-  "mcp>=1.5.0,<1.10",
+  "mcp>=1.5.0",
   "opentelemetry-exporter-otlp",
   "opentelemetry-sdk",
   "pydantic",
