feat: Refactor server handling in A2A and MCP serving (#538)
* Refactor server handling in A2A and MCP serving

- Introduced `ServerHandle` class for better management of server lifecycle.
- Updated `serve_async` methods to return `ServerHandle` instead of tuples.
- Adjusted related code in integration tests to utilize the new server handle.
- Cleaned up output handling and execution counts in Jupyter notebooks for clarity.
- Removed unnecessary output and improved shutdown procedures for servers.

* lint

* fix docstring

* lint

* need to fully import uvicorn

* address PR comments

* lint

* docs

* lint

* lint

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,10 +27,11 @@ nav:
   - API Reference:
     - Agent: api/agent.md
     - Config: api/config.md
-    - Tools: api/tools.md
-    - Tracing: api/tracing.md
     - Evaluation: api/evaluation.md
     - Logging: api/logging.md
+    - Serving: api/serving.md
+    - Tools: api/tools.md
+    - Tracing: api/tracing.md
 
 theme:
   name: material
