Run Cookbook Tests in pytest, in parallel (#549)
* chore: Update cookbook testing workflow and add tests

- Renamed workflow from "Tests for Cookbooks" to "Cookbook Tests" for clarity.
- Updated the testing command to use `pytest` for running tests in the cookbook directory.
- Added a new test file to validate that all Jupyter notebooks in the cookbook execute without errors, enhancing our testing coverage.
- Introduced an environment variable check in the `mcp_agent.ipynb` notebook to mock user input during tests. 🎉

* Run cookbooks in parallel

* lint

--- a/.github/workflows/tests-cookbook.yaml
+++ b/.github/workflows/tests-cookbook.yaml
@@ -1,4 +1,4 @@
-name: Tests for Cookbooks
+name: Cookbook Tests
 
 on:
   push:
@@ -27,10 +27,8 @@ jobs:
         run: |
           uv sync --group tests --extra all --extra a2a
 
-      - name: Run Jupyter Notebook tests
-        working-directory: docs/cookbook
+      - name: Run Cookbook Tests
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          python -m ipykernel install --user --name=anyagent
-          for nb in `ls -1 *.ipynb`; do jupyter execute --kernel_name=anyagent $nb; done
+          pytest tests/cookbooks -v -n 4
