Upgrade to support new A2A Protocol (#568)
* Refactor task management to context management in AnyAgentExecutor 🎉

- Replaced TaskManager with ContextManager in AnyAgentExecutor for better context handling.
- Updated A2AServingConfig to use context_timeout_minutes instead of task_timeout_minutes.
- Introduced ContextManager class to manage conversation context and handle expiration.
- Adjusted related methods to ensure smooth integration with the new context management system.
- Updated tests to reflect changes in context handling and timeout settings.

Let's keep the conversation flowing smoothly! 🚀

* Keep optional params, fix tests

* fix unit tests

* Update src/any_agent/serving/a2a/config_a2a.py

Co-authored-by: javiermtorres <javier@mozilla.ai>

---------

Co-authored-by: javiermtorres <javier@mozilla.ai>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,7 @@ extend-select = ["ALL"]
 "src/any_agent/evaluation/evaluators/*" = ["D103", "D107"]
 "src/any_agent/frameworks/*" = ["D107", "D102"]
 "src/any_agent/tools/mcp/*" = ["D101"]
+"src/any_agent/tools/a2a.py" = ["UP045"]  # Use `X | Y` for type unions - disabled for Google ADK compatibility
 "tests/*" = ["D"]
 "*.ipynb" = ["T201"]
 
