Avoid import errors in Python 3.11 (#567)
* Avoid import errors in Python 3.11

* Add description

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,6 +127,7 @@ extend-select = ["ALL"]
 "src/any_agent/evaluation/*" = ["D101", "D103", "D107"]  # TODO: Revisit when working on evaluation
 "src/any_agent/evaluation/evaluators/*" = ["D103", "D107"]
 "src/any_agent/frameworks/*" = ["D107", "D102"]
+"src/any_agent/serving/a2a/agent_executor.py" = ["E402", "D102"]  # Due to Python 3.11 compatibility
 "src/any_agent/tools/mcp/*" = ["D101"]
 "src/any_agent/tools/a2a.py" = ["UP045"]  # Use `X | Y` for type unions - disabled for Google ADK compatibility
 "tests/*" = ["D"]
