feat: Introduce `any_agent/callbacks`. (#554)
* feat: Introduce `any_agent/callbacks`.

* Fix tool error tests, pre-commit and commented code

* Fix agno

* placeholder docs

* Update src/any_agent/callbacks/span_generation/google.py

Co-authored-by: javiermtorres <javier@mozilla.ai>

* Update src/any_agent/callbacks/span_generation/google.py

Co-authored-by: javiermtorres <javier@mozilla.ai>

* Add `callbacks/context`.

Create separate `Context` object for each agent run.

* Add _SpanGeneration base class

* Update traces and snapshot

* Add docs and update span_generation tests.

* PR Comments to Callback Support (#579)

* docs fix, unit test

* Refactor callback methods and enhance unit tests

- Cleaned up whitespace in callback implementations for better readability.
- Improved the `SampleCallback` class with type hints for method arguments.
- Added `ExceptionCallback` to test exception handling in callbacks.
- Created helper functions for agent creation and running tests with mocks.
- Updated unit tests to verify callback behavior and exception handling.

* Add pseudocode

* Avoid pseudocode run in test docs

* pre-commit

* Rename _callback_context -> _callback_contexts

* Drop callbacks=None from agent_judge

* fix(span_generation): Explicitly check for `is not None`.

Allows to pass values like empty dict for args

* fix(agent_trace): Allow tool.args to be not set

* Drop `callbacks=None` support

---------

Co-authored-by: javiermtorres <javier@mozilla.ai>
Co-authored-by: Nathan Brake <33383515+njbrake@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - Intro: index.md
   - Agents:
     - Defining and Running Agents: agents/index.md
+    - Callbacks: agents/callbacks.md
     - Frameworks:
       - Agno: agents/frameworks/agno.md
       - Google ADK: agents/frameworks/google_adk.md
@@ -26,6 +27,7 @@ nav:
       - Use an Agent as a tool for another agent (A2A): cookbook/a2a_as_tool.ipynb
   - API Reference:
     - Agent: api/agent.md
+    - Callbacks: api/callbacks.md
     - Config: api/config.md
     - Evaluation: api/evaluation.md
     - Logging: api/logging.md
