Feat: Use Mistral API for docs and tests instead of OpenAI API (#574)
* in progress mistral support

* llama index requires stream options to be set

* Fixed langchain

* Switch all the docs over to Mistral

* lint

* update trace assets and consolidate model id to constants

* fix unit test

* lint

* refactor: Enhance model argument handling and improve test consistency 🎉

- Updated `LlmJudge` and `AnyAgent` to use copies of model arguments to prevent unintended modifications.
- Introduced `DEFAULT_MODEL_ARGS` for consistent model argument usage across tests, replacing hardcoded values.
- Updated various integration tests to utilize the new constants, ensuring cleaner and more maintainable code. Let's keep it fun and tidy! 🚀

* update traces

* fix unit tests

* Update README.md

Co-authored-by: javiermtorres <javier@mozilla.ai>

* everyone uses mistral-small

* Cleanup

* fix: ambiguity in integration test

* check that it was executed three times

* lint

* merge

* chore: update dependencies and clean up code

* fixes after review

* Update test snapshots with new trace data and adjust output formatting for consistency. Enhanced clarity in step descriptions for better readability. 🎉

* simplify integration test judge checks

* update assets

* Update test snapshots with new trace data and SDK version bump to 1.34.1. Adjusted timestamps, span IDs, and trace IDs for consistency across multiple entries. 🎉

---------

Co-authored-by: javiermtorres <javier@mozilla.ai>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dynamic = ["version"]
 dependencies = [
   "duckduckgo_search",
   "fire",
-  "litellm==1.72.4", # until https://github.com/BerriAI/litellm/issues/11759 is fixed
+  "litellm>=1.74.0",
   "markdownify",
   "mcp>=1.5.0",
   "opentelemetry-exporter-otlp",
@@ -33,7 +33,7 @@ google = [
 
 langchain = [
   "langchain",
-  "langchain-litellm",
+  "langchain-litellm @ git+https://github.com/njbrake/langchain-litellm@patch-3", # until https://github.com/Akshay-Dongare/langchain-litellm/pull/19 is merged
   "langchain-mcp-adapters>=0.0.3",
   "langgraph",
 ]
@@ -147,7 +147,7 @@ disallow_untyped_decorators = false # mypy gets confused by pytest decorators
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
-timeout = 30
+timeout = 120
 
 
 [dependency-groups]
