--- a/.github/workflows/tests-integration.yaml
+++ b/.github/workflows/tests-integration.yaml
@@ -28,7 +28,7 @@ jobs:
       # Run the tinyagent test first to get an early signal of issues with the codebase.
       - name: Run TINYAGENT test
         env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
         run: pytest -v tests/integration/test_agent.py -k "TINYAGENT"
 
       - name: Run Snapshot tests
@@ -40,5 +40,5 @@ jobs:
 
       - name: Run Integration tests (parallel with xdist)
         env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
         run: pytest -v tests/integration -n auto -k "not test_load_and_run_agent[TINYAGENT]"
