docs(callbacks): Add `SensitiveDataOffloader` example. (#603)
* docs(callbacks): Add `SensitiveDataOffloader` example.

* Add cookbook/callbacks

* Add cookbook to mkdocs

* Add TAVILY_API_KEY

--- a/.github/workflows/tests-cookbook.yaml
+++ b/.github/workflows/tests-cookbook.yaml
@@ -30,5 +30,6 @@ jobs:
       - name: Run Cookbook Tests
         env:
           MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
+          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
         run: |
           pytest tests/cookbooks -v -n 4
