--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
   - Serving: serving.md
   - Cookbook:
       - Your First Agent: cookbook/your_first_agent.ipynb
+      - Using Callbacks: cookbook/callbacks.ipynb
       - MCP Agent: cookbook/mcp_agent.ipynb
       - Serve with A2A: cookbook/serve_a2a.ipynb
       - Use an Agent as a tool for another agent (A2A): cookbook/a2a_as_tool.ipynb
