Enable A2A in mypy checks (#583)
* Un-ignore imports

* Add A2A dependencies

* First type fixes

* Fix wrong tuple format

* Fix most type checks for A2A functionality

* Fix types to a2a v0.2.11

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -145,6 +145,10 @@ follow_untyped_imports = true
 module = "tests.*"
 disallow_untyped_decorators = false # mypy gets confused by pytest decorators
 
+[[tool.mypy.overrides]]
+module = ["pytest", "mktestdocs", "pytest_lazy_fixtures", "syrupy.assertion"]
+ignore_missing_imports = true # pytest related modules are not found
+
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
