chore: Vendor `langchain_litellm`. (#608)
* chore: Vendor `langchain_litellm`.

* fix: Add litellm.drop_params = True

* Fix import for proper patching

* Remove drop params

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,6 +25,7 @@ repos:
         args:
           - "--fix"
           - "--exit-non-zero-on-fix"
+        exclude: src/any_agent/vendor
       - id: ruff-format
 
   - repo: local
