docs: wider margin for main part of screen (#612)
* Wider margin

* lint

* At small helper JS to adjust width of tracing page

* lint

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,9 @@ theme:
 extra_css:
   - assets/custom.css
 
+extra_javascript:
+  - assets/custom.js
+
 markdown_extensions:
   - admonition
   - pymdownx.highlight:
