--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,4 +87,7 @@ plugins:
           show_root_heading: true
           heading_level: 3
 
+hooks:
+  - scripts/hooks.py
+
 edit_uri: edit/main/docs/
