docs: more mkdocs features (#615)
* docs: more mkdocs features

* make font of header roboto

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,23 +38,31 @@ nav:
 
 theme:
   name: material
+  font:
+    text: Noto Sans
+    code: Noto Sans Mono
   palette:
-    - scheme: default
-      primary: black
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: blue gray
       toggle:
         icon: material/lightbulb
         name: Switch to dark mode
-    - scheme: slate
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
       primary: grey
       toggle:
         icon: material/lightbulb-outline
         name: Switch to light mode
+    - accent: blue
   logo: images/any-agent-logo-mark.png
   favicon: images/any-agent_favicon.png
   features:
     - content.code.copy
     - content.tabs.link
     - content.action.edit
+    - navigation.expand
+    - navigation.footer
 
 extra_css:
   - assets/custom.css
