chore: Also run `docs` workflow when modifying `scripts/hooks.py` (#630)

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -7,11 +7,13 @@ on:
       - mkdocs.yml
       - 'docs/**'
       - 'src/**'
+      - 'scripts/hooks.py'
   pull_request:
     paths:
       - mkdocs.yml
       - 'docs/**'
       - 'src/**'
+      - 'scripts/hooks.py'
   workflow_dispatch:
 
 jobs:
