Experimental Support for Any-LLM (#635)
* Initial support for llm-squid (only local atm)

* refactor: switch from ProvidersClient to llm_squid for model completions in TinyAgent

* tinyagent with ollama

* rename

* published package!

* lint

* lint

* docs

* remove uneccesary package

* lint

* testing for any_llm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,10 @@ all = [
   "any-agent[agno,google,langchain,llama_index,openai,smolagents]",
 ]
 
+any_llm = [
+  "any-llm-sdk",
+]
+
 [project.urls]
 Documentation = "https://mozilla-ai.github.io/any-agent/"
 Issues = "https://github.com/mozilla-ai/any-agent/issues"
