docs(cookbook): Evaluation (programmatic, llm, agent) (#638)
* docs(cookbook): Evaluation (programmatic, llm, agent)

docs(cookbook): remove output

chore: linting

* docs(cookbook): output with duckduckgo_search

* chore(codespell): ignore 2 Spanish words

* docs(cookbook): simplified criteria, emphasize tool usage

* chore(docs): add new cookbook to mkdocs and readme

* Update tests-cookbook.yaml

Re-add openai api key

* Update tests-cookbook.yaml

* test(cookbook): readd openai api key usage

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
   - Serving: serving.md
   - Cookbook:
       - Your First Agent: cookbook/your_first_agent.ipynb
+      - Your First Agent Evaluation: cookbook/your_first_agent_evaluation.ipynb
       - Using Callbacks: cookbook/callbacks.ipynb
       - MCP Agent: cookbook/mcp_agent.ipynb
       - Serve with A2A: cookbook/serve_a2a.ipynb
