chore(deps): Bump "llama-index>=0.12.52, <1".
Fixes #658

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ langchain = [
 ]
 
 llama_index = [
-  "llama-index",
+  "llama-index>=0.12.52, <1",
   "llama-index-llms-litellm",
   "llama-index-tools-mcp>=0.2.5",
   "platformdirs>=4.3.7",
