feat(tests): Setup Codecov. (#673)
* feat(tests): Setup Codecov.

* Always run codecov

--- a/.github/workflows/tests-cookbook.yaml
+++ b/.github/workflows/tests-cookbook.yaml
@@ -33,9 +33,15 @@ jobs:
           TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          pytest tests/cookbooks -v -n 4
+          pytest tests/cookbooks -v -n 4 --cov --cov-branch --cov-report=xml
 
       - name: Upload finished cookbooks
         uses: actions/upload-artifact@v4
         with:
           path: "docs/cookbook/*.ipynb"
+
+      - name: Upload coverage reports to Codecov
+        if: always()
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
