--- a/.github/workflows/tests-integration.yaml
+++ b/.github/workflows/tests-integration.yaml
@@ -31,7 +31,7 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
-        run: pytest -v tests/integration/test_agent.py -k "TINYAGENT"
+        run: pytest tests/integration/test_agent.py -v -k "TINYAGENT" --cov --cov-branch --cov-report=xml
 
       - name: Run Snapshot tests
         run: pytest -v tests/snapshots
@@ -43,4 +43,10 @@ jobs:
       - name: Run Integration tests (parallel with xdist)
         env:
           MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
-        run: pytest -v tests/integration -n auto -k "not test_load_and_run_agent[TINYAGENT]"
+        run: pytest tests/integration -v -n auto -k "not test_load_and_run_agent[TINYAGENT]" --cov --cov-branch --cov-report=xml --cov-append
+
+      - name: Upload coverage reports to Codecov
+        if: always()
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
