--- a/.github/workflows/tests-unit.yaml
+++ b/.github/workflows/tests-unit.yaml
@@ -35,4 +35,10 @@ jobs:
       - run: |
           uv sync --group tests --extra all --extra a2a
 
-      - run: pytest -v tests/unit
+      - run: pytest tests/unit -v --cov --cov-branch --cov-report=xml
+
+      - name: Upload coverage reports to Codecov
+        if: always()
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
