--- a/pyproject.toml
+++ b/pyproject.toml
@@ -179,6 +179,7 @@ lint = [
 
 tests = [
   "pytest>=8,<9",
+  "pytest-cov>=6.2.1,<7",
   "pytest-sugar>=0.9.6",
   "pytest-asyncio>=0.26.0",
   "pytest-lazy-fixtures>=1.1.2",
