--- a/.github/workflows/tests-docs.yaml
+++ b/.github/workflows/tests-docs.yaml
@@ -7,11 +7,13 @@ on:
       - 'src/**'
       - 'tests/**'
       - 'docs/**'
+      - '.github/workflows/**'
   pull_request:
     paths:
       - 'src/**'
       - 'tests/**'
       - 'docs/**'
+      - '.github/workflows/**'
   workflow_dispatch:
 
 jobs:
