--- a/.github/workflows/tests-unit.yaml
+++ b/.github/workflows/tests-unit.yaml
@@ -6,10 +6,12 @@ on:
     paths:
       - 'src/**'
       - 'tests/**'
+      - '.github/workflows/**'
   pull_request:
     paths:
       - 'src/**'
       - 'tests/**'
+      - '.github/workflows/**'
   workflow_dispatch:
 
 jobs:
