--- a/.github/workflows/tests-unit.yaml
+++ b/.github/workflows/tests-unit.yaml
@@ -37,7 +37,7 @@ jobs:
       - run: |
           uv sync --group tests --extra all --extra a2a
 
-      - run: pytest tests/unit -v --cov --cov-branch --cov-report=xml
+      - run: pytest tests/unit -v --cov --cov-report=xml
 
       - name: Upload coverage reports to Codecov
         if: always()
