--- a/pyproject.toml
+++ b/pyproject.toml
@@ -156,6 +156,11 @@ asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
 timeout = 120
 
+[tool.coverage.run]
+branch = true
+omit = [
+  "src/any_agent/vendor/*"
+]
 
 [dependency-groups]
 dev = [
