--- a/.github/workflows/tests-docs.yaml
+++ b/.github/workflows/tests-docs.yaml
@@ -36,7 +36,7 @@ jobs:
           uv sync --group tests --extra all --extra a2a
 
       - name: Run Documentation tests
-        run: pytest tests/docs -v --cov --cov-branch --cov-report=xml
+        run: pytest tests/docs -v --cov --cov-report=xml
 
       - name: Upload coverage reports to Codecov
         if: always()
