chore: Run workflows on `pyproject.toml` updates. (#679)

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -8,12 +8,14 @@ on:
       - 'docs/**'
       - 'src/**'
       - 'scripts/hooks.py'
+      - 'pyproject.toml'
   pull_request:
     paths:
       - mkdocs.yml
       - 'docs/**'
       - 'src/**'
       - 'scripts/hooks.py'
+      - 'pyproject.toml'
   workflow_dispatch:
 
 jobs:
