--- a/.github/workflows/tests-integration.yaml
+++ b/.github/workflows/tests-integration.yaml
@@ -30,9 +30,10 @@ jobs:
       # Run the tinyagent test first to get an early signal of issues with the codebase.
       - name: Run TINYAGENT test
         env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: pytest tests/integration/test_agent.py -v -k "TINYAGENT" --cov --cov-report=xml
 
       - name: Run Snapshot tests
