fix(tests): Add missing `OPENAI_API_KEY`.

--- a/.github/workflows/tests-integration.yaml
+++ b/.github/workflows/tests-integration.yaml
@@ -46,6 +46,7 @@ jobs:
       - name: Run Integration tests (parallel with xdist)
         env:
           MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: pytest tests/integration -v -n auto -k "not test_load_and_run_agent[TINYAGENT]" --cov --cov-report=xml --cov-append
 
       - name: Upload coverage reports to Codecov
