chore: Split `test-integration` into separate parallel jobs. (#701)
* chore: Split `test-integration` into separate parallel jobs.

* Split tools

* Run a2a with `-n auto` and include `a2a` as dep for MCP

* Use -n auto

--- a/.github/workflows/tests-integration.yaml
+++ b/.github/workflows/tests-integration.yaml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-integration-tests:
+  run-integration-tinyagent:
     timeout-minutes: 30
     runs-on: ubuntu-latest
 
@@ -23,31 +23,94 @@ jobs:
           python-version: 3.13
           activate-environment: true
 
-      - name: Install barebones
-        run: |
-          uv sync --group tests
+      - run: uv sync --group tests
 
-      # Run the tinyagent test first to get an early signal of issues with the codebase.
       - name: Run TINYAGENT test
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: pytest tests/integration/test_agent.py -v -k "TINYAGENT" --cov --cov-report=xml
+        run: pytest tests/integration/frameworks -v -k "TINYAGENT" --cov --cov-report=xml --cov-append
 
-      - name: Run Snapshot tests
-        run: pytest -v tests/snapshots
+      - name: Upload coverage reports to Codecov
+        if: always()
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Install extras
-        run: |
-          uv sync --group tests --extra all --extra a2a
+  run-integration-all:
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
 
-      - name: Run Integration tests (parallel with xdist)
-        env:
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: astral-sh/setup-uv@v6
+        with:
+          python-version: 3.13
+          activate-environment: true
+
+      - run: uv sync --group tests --extra all
+
+      - env:
           MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: pytest tests/integration -v -n auto -k "not test_load_and_run_agent[TINYAGENT]" --cov --cov-report=xml --cov-append
+        run: pytest tests/integration/frameworks -n auto -v -k "not TINYAGENT" --cov --cov-report=xml --cov-append
+
+      - name: Run Tool tests
+        run: pytest -v tests/integration/tools --cov --cov-report=xml --cov-append
+
+      - name: Run Snapshot tests
+        run: pytest -v tests/snapshots --cov --cov-report=xml --cov-append
+
+      - name: Upload coverage reports to Codecov
+        if: always()
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+  run-integration-a2a:
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: astral-sh/setup-uv@v6
+        with:
+          python-version: 3.13
+          activate-environment: true
+
+      - run: uv sync --group tests --extra all --extra a2a
+
+      - env:
+          MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
+        run: pytest tests/integration/a2a -n auto -v --cov --cov-report=xml --cov-append
+
+      - name: Upload coverage reports to Codecov
+        if: always()
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+
+  run-integration-mcp:
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: astral-sh/setup-uv@v6
+        with:
+          python-version: 3.13
+          activate-environment: true
+
+      - run: uv sync --group tests --extra all --extra a2a  # TODO https://github.com/mozilla-ai/any-agent/issues/665
+
+      - env:
+          MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
+        run: pytest tests/integration/mcp -n auto -v --cov --cov-report=xml --cov-append
 
       - name: Upload coverage reports to Codecov
         if: always()
