--- a/.github/workflows/tests-cookbook.yaml
+++ b/.github/workflows/tests-cookbook.yaml
@@ -39,6 +39,7 @@ jobs:
 
       - name: Upload finished cookbooks
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           path: "docs/cookbook/*.ipynb"
 
