--- a/.github/workflows/tests-cookbook.yaml
+++ b/.github/workflows/tests-cookbook.yaml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          path: "docs/cookbook/*.ipynb"
+          path: "docs/cookbook/executed_*.ipynb"
 
       - name: Upload coverage reports to Codecov
         if: always()
