chore(deps): Drop unnecessary `opentelemetry-exporter-otlp`. (#712)
* chore(deps): Drop unnecessary `opentelemetry-exporter-otlp`.

* Install opentelemetry-exporter-otlp for test-docs

--- a/.github/workflows/tests-docs.yaml
+++ b/.github/workflows/tests-docs.yaml
@@ -36,6 +36,7 @@ jobs:
       - name: Install
         run: |
           uv sync --group tests --extra all --extra a2a
+          uv pip install opentelemetry-exporter-otlp
 
       - name: Run Documentation tests
         run: pytest tests/docs -v --cov --cov-report=xml
