feat(tinyagent): Use `any-llm` by default. (#722)
* feat(tinyagent): Use `any-llm` by default.

* Fix tests

* fix lint

* Update test_agent for any-llm

* bump any-llm-sdk. Fix parallel_tool_calls

* release openai pin for any-llm compatibility

* Update pyproject.toml

* Fix `test_agent` drop `(extra="forbid"` from return type.

This creates an schema with `additionalProperties=False`, which is not supported by gemini API. See related discussion in https://github.com/googleapis/python-genai/issues/1113

* Bump "any-llm-sdk>=0.12.0

* bump any-llm-sdk>=0.13

* bump tests

* Update src/any_agent/frameworks/tinyagent.py

Co-authored-by: Nathan Brake <33383515+njbrake@users.noreply.github.com>

* Add type ignore

---------

Co-authored-by: Nathan Brake <33383515+njbrake@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = {text = "Apache-2.0"}
 requires-python = ">=3.11"
 dynamic = ["version"]
 dependencies = [
+  "any-llm-sdk>=0.13.0,<1",
   "litellm>=1.74.0",
   "mcp>=1.5.0",
   "opentelemetry-sdk",
@@ -41,8 +42,7 @@ llama_index = [
 ]
 
 openai = [
-  "openai<1.99.2",
-  "openai-agents>=0.2.0",
+  "openai-agents>=0.2.6, <1",
 ]
 
 smolagents = [
@@ -192,6 +192,7 @@ tests = [
   "debugpy>=1.8.13",
   "mktestdocs>=0.2.4",
   "syrupy>=4.9.1",
+  "any-llm-sdk[anthropic,google,huggingface,mistral,xai]>=0.13.0,<1",
 ]
 
 # For completeness, but 'uv sync --group dev' currently installs the others too.
