--- a/demo/requirements.txt
+++ b/demo/requirements.txt
@@ -1,5 +1,4 @@
-streamlit
-openai-agents>=0.0.14
-any-agent[all]==0.15.0
-surf-spot-finder @ git+https://github.com/mozilla-ai/surf-spot-finder
+any-agent[all]>=1.4.0
+geocoder
 nest_asyncio
+streamlit
