fix(demo): Replace reboot_space

--- a/.github/workflows/publish_demo_to_hf_spaces.yaml
+++ b/.github/workflows/publish_demo_to_hf_spaces.yaml
@@ -39,4 +39,4 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           pip install huggingface_hub
-          python demo/reboot_space.py
+          python demo/restart_space.py
