feat: Support `composio` via custom `CallableProvider`. (#793)
* feat: Support `composio` via custom `CallableProvider`.

Generic provider that can be used with any of the frameworks.

* Add `composio` to `pyproject.toml`

* Add composio secrets to tests-integration

* Add missing OPENAI_API_KEY

* Drop `composio` from `all`

* Add composio to ling

* fix: Add composio in `run-mypy`

--- a/.github/workflows/tests-integration.yaml
+++ b/.github/workflows/tests-integration.yaml
@@ -58,7 +58,7 @@ jobs:
           python-version: 3.13
           activate-environment: true
 
-      - run: uv sync --group tests --extra all
+      - run: uv sync --group tests --extra all --extra composio
 
       - env:
           MISTRAL_API_KEY: ${{ secrets.MISTRAL_API_KEY }}
@@ -66,6 +66,10 @@ jobs:
         run: pytest tests/integration/frameworks -n auto -v -k "not TINYAGENT" --cov --cov-report=xml --cov-append
 
       - name: Run Tool tests
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          COMPOSIO_API_KEY: ${{ secrets.COMPOSIO_API_KEY }}
+          COMPOSIO_USER_ID: ${{ secrets.COMPOSIO_USER_ID }}
         run: pytest -v tests/integration/tools --cov --cov-report=xml --cov-append
 
       - name: Run Snapshot tests
