--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,10 @@ a2a = [
   "httpx",
 ]
 
+composio = [
+  "composio>=0.8.9,<1"
+]
+
 all = [
   "any-agent[agno,google,langchain,llama_index,openai,smolagents]",
 ]
