docs(tools): Add `Composio` section. (#794)
* docs(tools): Add `Composio` section.

- Group Composio and Agent as Tools under `Callable`.

* Add --extra composio

* Make composio run

* mock composio

--- a/.github/workflows/tests-docs.yaml
+++ b/.github/workflows/tests-docs.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install
         run: |
-          uv sync --group tests --extra all --extra a2a
+          uv sync --group tests --extra all --extra a2a --extra composio
           uv pip install opentelemetry-exporter-otlp
 
       - name: Run Documentation tests
