--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,6 +54,10 @@ a2a = [
   "httpx",
 ]
 
+deepagents = [
+  "deepagents>=0.0.5"
+]
+
 all = [
   "any-agent[agno,google,langchain,llama_index,openai,smolagents]",
 ]
