--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ a2a = [
 ]
 
 deepagents = [
-  "deepagents>=0.0.5"
+  "deepagents @ git+https://github.com/therealtimex/deepagents.git@realtimex"
 ]
 
 all = [
